tests/snapshots/examples_fixtures/type_system__failing__17_handle_unknown_operation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/17_handle_unknown_operation.flx
== compile ==
failed (compile)
== diagnostics ==
error[E401]: Unknown Effect Operation

Handler for `Console` includes unknown operation `read`.

  examples/type_system/failing/17_handle_unknown_operation.flx:9:9
  |
9 |         read(resume) -> resume("x")
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         --------------------------- unknown operation arm

Hint:
  Add this operation to the effect declaration or remove the arm.
== stdout ==
<not executed>
